--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 <p class="blue-text text-darken-4 login_info">გასაგრძელებლად, გაიარე ავტორიზაცია, ან <a href="/register" class="purple-text text-darken-1">დარეგისტრირდი</a></p>
 <div class="container">
     <form method="POST" action="/">
-        <input type="text" name="username" placeholder="მომხმარებლის სახელი" required>
-        <input type="password" name="password" placeholder="მომხმარებლის პაროლი" required>
+        <input type="text" name="username" placeholder="მომხმარებლის სახელი" required autocomplete="false">
+        <input type="password" name="password" placeholder="მომხმარებლის პაროლი" required autocomplete="false">
        <button type="submit"  class="btn-large green darken-4">შესვლა</button>
     </form>
 </div>
