--- a/templates/main.html
+++ b/templates/main.html
@@ -4,8 +4,8 @@
 {% block content %}
 <div class="container">
     <form id="form" method="POST" action="/save_idea">
-        <input type="text" name="title" placeholder="ახალი იდეის სათაური">
-        <input type="text" name="tag" placeholder="კატეგორია">
+        <input type="text" name="title" placeholder="ახალი იდეის სათაური"  autocomplete="false">
+        <input type="text" name="tag" placeholder="კატეგორია" autocomplete="false">
         <textarea name="text" placeholder="იდეის სრული აღწერა" form="form"></textarea>
         <a class="btn-floating blue darken-2" onclick="document.querySelector('form').submit()"><i class="material-icons">send</i></a>
         <!-- <a class="btn-floating green darken-2" onclick="location.reload()"><i class="material-icons">autorenew</i></a> -->
